--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,12 @@
 
   <body>
 
+    <nav>
+      <a href="/drones">Lista de drones</a>
+    </nav>
+
     {{{body}}}
+   
 
     <script src="/js/script.js"></script>
   </body>
