--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -9,7 +9,8 @@
         <li>{{this.maxSpeed}}</li>
       </ul>
     </li>
-
   </ul>
+
+  <a href="/drones/{{_id}}/edit">Edit drone</a>
 
 {{/each}}
