--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,7 @@
 
     <nav>
       <a href="/drones">Lista de drones</a>
+      <a href="/drones/create">Crea un nuevo dron</a>
     </nav>
 
     {{{body}}}
